Added "Publications" section.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="images/LI-In-Bug.png">
             <img src="images/GitHub-Mark-64px.png">
         </div>
-        <h2>Key Skills - Python</h2>
+        <h2>Key Skills</h2>
         <div class="key-skills">
             <img src="images/data_analysis_icon.png">
             <p><b>Data Analysis</b></p>
@@ -37,7 +37,13 @@
             <img src="images/protist_icon.png">
             <img src="images/covid_icon.png">
             <img src="images/earth_icon.png">
+        </div>
+        <div class="publications">
+            <h2>Publications</h2>
+            <a href="https://imafungus.biomedcentral.com/articles/10.5598/imafungus.2018.09.02.04">
             <img src="images/mushroom_icon.png">
+            </a>
+            <p class="my-publications"><b>Scambler, R.</b>, Niskanen, T., Assyov, B., Ainsworth, A. M., Bellanger, J. M., Loizides, M., Moreau, P. A., Kirk, P. M., and Liimatainen, K. (2018) Diversity of Chroogomphus (Gomphidiaceae, Boletales) in Europe, and typification of C. rutilus. IMA Fungus. 9 (2), pp. 271 - 299.</p>
         </div>
         <div class="form-box">
             <h2>Contact Me</h2>
